--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ABNAFE</string>
+    <string name="app_name">NutriApp</string>
     <string name="facebook_app_id">432158635072407</string>
 <string name="fb_login_protocol_scheme">fb432158635072407</string>
 
